fixup external kube-apiserver port

--- a/roles/kubernetes/client/tasks/main.yml
+++ b/roles/kubernetes/client/tasks/main.yml
@@ -8,7 +8,7 @@
       {{ kube_apiserver_access_address }}
       {%- endif -%}
     external_apiserver_port: >-
-      {%- if loadbalancer_apiserver is defined and loadbalancer_apiserver.address and loadbalancer_apiserver.port is defined -%}
+      {%- if loadbalancer_apiserver is defined and loadbalancer_apiserver.address is defined and loadbalancer_apiserver.port is defined -%}
       {{ loadbalancer_apiserver.port|default(kube_apiserver_port) }}
       {%- else -%}
       {{ kube_apiserver_port }}
