--- a/roles/download/defaults/main.yml
+++ b/roles/download/defaults/main.yml
@@ -57,10 +57,10 @@ contiv_version: 1.2.1
 cilium_version: "v1.2.0"
 
 # Download URLs
-kubeadm_download_url: "https://storage.googleapis.com/kubernetes-release/release/{{ kubeadm_version }}/bin/linux/{{ image_arch }}/kubeadm"
+kubeadm_download_url: "http://xforcecloud.oss-cn-hangzhou.aliyuncs.com/kubernetes-release/release/{{ kubeadm_version }}/bin/linux/{{ image_arch }}/kubeadm"
 vault_download_url: "https://releases.hashicorp.com/vault/{{ vault_version }}/vault_{{ vault_version }}_linux_{{ image_arch }}.zip"
 etcd_download_url: "https://github.com/coreos/etcd/releases/download/{{ etcd_version }}/etcd-{{ etcd_version }}-linux-amd64.tar.gz"
-hyperkube_download_url: "https://storage.googleapis.com/kubernetes-release/release/{{ kube_version }}/bin/linux/amd64/hyperkube"
+hyperkube_download_url: "http://xforcecloud.oss-cn-hangzhou.aliyuncs.com/kubernetes-release/release/{{ kube_version }}/bin/linux/amd64/hyperkube"
 
 # Checksums
 hyperkube_checksums:
@@ -105,25 +105,25 @@ kubeadm_binary_checksum: "{{ kubeadm_checksums[kubeadm_version] }}"
 # You need to deploy kubernetes cluster on local private development.
 # Also provide the address of your own private registry.
 # And use --insecure-registry options for docker
-etcd_image_repo: "quay.io/coreos/etcd"
+etcd_image_repo: "quay-mirror.qiniu.com/coreos/etcd"
 etcd_image_tag: "{{ etcd_version }}{%- if image_arch != 'amd64' -%}-{{ image_arch }}{%- endif -%}"
-flannel_image_repo: "quay.io/coreos/flannel"
+flannel_image_repo: "quay-mirror.qiniu.com/coreos/flannel"
 flannel_image_tag: "{{ flannel_version }}"
-flannel_cni_image_repo: "quay.io/coreos/flannel-cni"
+flannel_cni_image_repo: "quay-mirror.qiniu.com/coreos/flannel-cni"
 flannel_cni_image_tag: "{{ flannel_cni_version }}"
-calicoctl_image_repo: "quay.io/calico/ctl"
+calicoctl_image_repo: "quay-mirror.qiniu.com/calico/ctl"
 calicoctl_image_tag: "{{ calico_ctl_version }}"
-calico_node_image_repo: "quay.io/calico/node"
+calico_node_image_repo: "quay-mirror.qiniu.com/calico/node"
 calico_node_image_tag: "{{ calico_version }}"
-calico_cni_image_repo: "quay.io/calico/cni"
+calico_cni_image_repo: "quay-mirror.qiniu.com/calico/cni"
 calico_cni_image_tag: "{{ calico_cni_version }}"
-calico_policy_image_repo: "quay.io/calico/kube-controllers"
+calico_policy_image_repo: "quay-mirror.qiniu.com/calico/kube-controllers"
 calico_policy_image_tag: "{{ calico_policy_version }}"
-calico_rr_image_repo: "quay.io/calico/routereflector"
+calico_rr_image_repo: "quay-mirror.qiniu.com/calico/routereflector"
 calico_rr_image_tag: "{{ calico_rr_version }}"
-hyperkube_image_repo: "gcr.io/google-containers/hyperkube-{{ image_arch }}"
+hyperkube_image_repo: "gcr-mirror.qiniu.com/google_containers/hyperkube-{{ image_arch }}"
 hyperkube_image_tag: "{{ kube_version }}"
-pod_infra_image_repo: "gcr.io/google_containers/pause-{{ image_arch }}"
+pod_infra_image_repo: "gcr-mirror.qiniu.com/google_containers/pause-{{ image_arch }}"
 pod_infra_image_tag: "{{ pod_infra_version }}"
 install_socat_image_repo: "xueshanf/install-socat"
 install_socat_image_tag: "latest"
@@ -154,47 +154,47 @@ dnsmasq_version: 2.78
 dnsmasq_image_repo: "andyshinn/dnsmasq"
 dnsmasq_image_tag: "{{ dnsmasq_version }}"
 kubedns_version: 1.14.13
-kubedns_image_repo: "gcr.io/google_containers/k8s-dns-kube-dns-{{ image_arch }}"
+kubedns_image_repo: "gcr-mirror.qiniu.com/google_containers/k8s-dns-kube-dns-{{ image_arch }}"
 kubedns_image_tag: "{{ kubedns_version }}"
 
 coredns_version: "{%- if image_arch != 'amd64' -%}1.1.3{%- else -%}1.2.2{%- endif -%}"
-coredns_image_repo: "gcr.io/google-containers/coredns"
+coredns_image_repo: "gcr-mirror.qiniu.com/google_containers/coredns"
 coredns_image_tag: "{{ coredns_version }}{%- if image_arch != 'amd64' -%}__{{ image_arch}}_linux{%- endif -%}"
 
 
-dnsmasq_nanny_image_repo: "gcr.io/google_containers/k8s-dns-dnsmasq-nanny-{{ image_arch }}"
+dnsmasq_nanny_image_repo: "gcr-mirror.qiniu.com/google_containers/k8s-dns-dnsmasq-nanny-{{ image_arch }}"
 dnsmasq_nanny_image_tag: "{{ kubedns_version }}"
-dnsmasq_sidecar_image_repo: "gcr.io/google_containers/k8s-dns-sidecar-{{ image_arch }}"
+dnsmasq_sidecar_image_repo: "gcr-mirror.qiniu.com/google_containers/k8s-dns-sidecar-{{ image_arch }}"
 dnsmasq_sidecar_image_tag: "{{ kubedns_version }}"
 dnsmasqautoscaler_version: 1.1.2
-dnsmasqautoscaler_image_repo: "gcr.io/google_containers/cluster-proportional-autoscaler-{{ image_arch }}"
+dnsmasqautoscaler_image_repo: "gcr-mirror.qiniu.com/google_containers/cluster-proportional-autoscaler-{{ image_arch }}"
 dnsmasqautoscaler_image_tag: "{{ dnsmasqautoscaler_version }}"
 kubednsautoscaler_version: 1.2.0
-kubednsautoscaler_image_repo: "gcr.io/google_containers/cluster-proportional-autoscaler-{{ image_arch }}"
+kubednsautoscaler_image_repo: "gcr-mirror.qiniu.com/google_containers/cluster-proportional-autoscaler-{{ image_arch }}"
 kubednsautoscaler_image_tag: "{{ kubednsautoscaler_version }}"
 test_image_repo: busybox
 test_image_tag: latest
 helm_version: "v2.9.1"
 helm_image_repo: "lachlanevenson/k8s-helm"
 helm_image_tag: "{{ helm_version }}"
-tiller_image_repo: "gcr.io/kubernetes-helm/tiller"
+tiller_image_repo: "gcr-mirror.qiniu.com/kubernetes-helm/tiller"
 tiller_image_tag: "{{ helm_version }}"
 vault_image_repo: "vault"
 vault_image_tag: "{{ vault_version }}"
 registry_image_repo: "registry"
 registry_image_tag: "2.6"
-registry_proxy_image_repo: "gcr.io/google_containers/kube-registry-proxy"
+registry_proxy_image_repo: "gcr-mirror.qiniu.com/google_containers/kube-registry-proxy"
 registry_proxy_image_tag: "0.4"
-local_volume_provisioner_image_repo: "quay.io/external_storage/local-volume-provisioner"
+local_volume_provisioner_image_repo: "quay-mirror.qiniu.com/external_storage/local-volume-provisioner"
 local_volume_provisioner_image_tag: "v2.1.0"
-cephfs_provisioner_image_repo: "quay.io/external_storage/cephfs-provisioner"
+cephfs_provisioner_image_repo: "quay-mirror.qiniu.com/external_storage/cephfs-provisioner"
 cephfs_provisioner_image_tag: "v2.1.0-k8s1.11"
-ingress_nginx_controller_image_repo: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller"
+ingress_nginx_controller_image_repo: "quay-mirror.qiniu.com/kubernetes-ingress-controller/nginx-ingress-controller"
 ingress_nginx_controller_image_tag: "0.19.0"
-ingress_nginx_default_backend_image_repo: "gcr.io/google_containers/defaultbackend"
+ingress_nginx_default_backend_image_repo: "gcr-mirror.qiniu.com/google_containers/defaultbackend"
 ingress_nginx_default_backend_image_tag: "1.4"
 cert_manager_version: "v0.5.0"
-cert_manager_controller_image_repo: "quay.io/jetstack/cert-manager-controller"
+cert_manager_controller_image_repo: "quay-mirror.qiniu.com/jetstack/cert-manager-controller"
 cert_manager_controller_image_tag: "{{ cert_manager_version }}"
 
 downloads:
