--- a/extra_vars.yaml
+++ b/extra_vars.yaml
@@ -8,7 +8,7 @@
 
 ## 2.inventory\release\group_vars\all\docker.yml
 ## Add other registry,example China registry mirror.
-#docker_registry_mirrors:
+docker_registry_mirrors:
    - https://registry.docker-cn.com
    - https://mirror.aliyuncs.com
 
@@ -22,3 +22,9 @@ ingress_nginx_enabled: true
 # Choose network plugin (cilium, calico, contiv, weave or flannel)
 # Can also be set to 'cloud', which lets the cloud provider setup appropriate routing
 kube_network_plugin: flannel
+# Kubernetes internal network for services, unused block of space.
+kube_service_addresses: 10.233.0.0/18
+# internal network. When used, it will assign IP
+# addresses from this range to individual pods.
+# This network must be unused in your network infrastructure!
+kube_pods_subnet: 10.233.64.0/18
