--- a/extra_vars.yaml
+++ b/extra_vars.yaml
@@ -15,7 +15,7 @@ bootstrap_os: centos
 ## Add other registry,example China registry mirror.
 docker_registry_mirrors:
    - https://registry.docker-cn.com
-   - https://registry-vpc.cn-hangzhou.aliyuncs.com
+   - https://registry.aliyuncs.com
 
 ## 3.inventory\cluster\group_vars\k8s-cluster\addons.yml
 # Helm deployment
@@ -36,6 +36,14 @@ kube_service_addresses: 10.233.0.0/18
 kube_pods_subnet: 10.233.64.0/18
 # Kube-proxy proxyMode configuration.
 # Can be ipvs, iptables
-kube_proxy_mode: iptables
+kube_proxy_mode: ipvs
 # Can be dnsmasq_kubedns, kubedns, coredns, coredns_dual, manual or none
 dns_mode: coredns
+
+## 5.roles\kubespray-defaults\defaults\main.yaml
+# Users to create for basic auth in Kubernetes API via HTTP
+kube_api_pwd: "xforcecloud12345"
+kube_users:
+  kube:
+    pass: "{{kube_api_pwd}}"
+    role: admin
