--- a/roles/download/defaults/main.yml
+++ b/roles/download/defaults/main.yml
@@ -121,9 +121,9 @@ calico_policy_image_repo: "quay-mirror.qiniu.com/calico/kube-controllers"
 calico_policy_image_tag: "{{ calico_policy_version }}"
 calico_rr_image_repo: "quay-mirror.qiniu.com/calico/routereflector"
 calico_rr_image_tag: "{{ calico_rr_version }}"
-hyperkube_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/kubernetes-zy/hyperkube-{{ image_arch }}"
+hyperkube_image_repo: "registry.aliyuncs.com/kubernetes-zy/hyperkube-{{ image_arch }}"
 hyperkube_image_tag: "{{ kube_version }}"
-pod_infra_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/pause-{{ image_arch }}"
+pod_infra_image_repo: "registry.aliyuncs.com/google_containers/pause-{{ image_arch }}"
 pod_infra_image_tag: "{{ pod_infra_version }}"
 install_socat_image_repo: "xueshanf/install-socat"
 install_socat_image_tag: "latest"
@@ -154,23 +154,23 @@ dnsmasq_version: 2.78
 dnsmasq_image_repo: "andyshinn/dnsmasq"
 dnsmasq_image_tag: "{{ dnsmasq_version }}"
 kubedns_version: 1.14.13
-kubedns_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/k8s-dns-kube-dns-{{ image_arch }}"
+kubedns_image_repo: "registry.aliyuncs.com/google_containers/k8s-dns-kube-dns-{{ image_arch }}"
 kubedns_image_tag: "{{ kubedns_version }}"
 
 coredns_version: "{%- if image_arch != 'amd64' -%}1.1.3{%- else -%}1.2.2{%- endif -%}"
-coredns_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/coredns"
+coredns_image_repo: "registry.aliyuncs.com/google_containers/coredns"
 coredns_image_tag: "{{ coredns_version }}{%- if image_arch != 'amd64' -%}__{{ image_arch}}_linux{%- endif -%}"
 
 
-dnsmasq_nanny_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/k8s-dns-dnsmasq-nanny-{{ image_arch }}"
+dnsmasq_nanny_image_repo: "registry.aliyuncs.com/google_containers/k8s-dns-dnsmasq-nanny-{{ image_arch }}"
 dnsmasq_nanny_image_tag: "{{ kubedns_version }}"
-dnsmasq_sidecar_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/k8s-dns-sidecar-{{ image_arch }}"
+dnsmasq_sidecar_image_repo: "registry.aliyuncs.com/google_containers/k8s-dns-sidecar-{{ image_arch }}"
 dnsmasq_sidecar_image_tag: "{{ kubedns_version }}"
 dnsmasqautoscaler_version: 1.1.2
-dnsmasqautoscaler_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/cluster-proportional-autoscaler-{{ image_arch }}"
+dnsmasqautoscaler_image_repo: "registry.aliyuncs.com/google_containers/cluster-proportional-autoscaler-{{ image_arch }}"
 dnsmasqautoscaler_image_tag: "{{ dnsmasqautoscaler_version }}"
 kubednsautoscaler_version: 1.2.0
-kubednsautoscaler_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/cluster-proportional-autoscaler-{{ image_arch }}"
+kubednsautoscaler_image_repo: "registry.aliyuncs.com/google_containers/cluster-proportional-autoscaler-{{ image_arch }}"
 kubednsautoscaler_image_tag: "{{ kubednsautoscaler_version }}"
 test_image_repo: busybox
 test_image_tag: latest
@@ -183,15 +183,15 @@ vault_image_repo: "vault"
 vault_image_tag: "{{ vault_version }}"
 registry_image_repo: "registry"
 registry_image_tag: "2.6"
-registry_proxy_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/kube-registry-proxy"
+registry_proxy_image_repo: "registry.aliyuncs.com/google_containers/kube-registry-proxy"
 registry_proxy_image_tag: "0.4"
 local_volume_provisioner_image_repo: "quay-mirror.qiniu.com/external_storage/local-volume-provisioner"
 local_volume_provisioner_image_tag: "v2.1.0"
 cephfs_provisioner_image_repo: "quay-mirror.qiniu.com/external_storage/cephfs-provisioner"
 cephfs_provisioner_image_tag: "v2.1.0-k8s1.11"
-ingress_nginx_controller_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/nginx-ingress-controller"
+ingress_nginx_controller_image_repo: "registry.aliyuncs.com/google_containers/nginx-ingress-controller"
 ingress_nginx_controller_image_tag: "0.19.0"
-ingress_nginx_default_backend_image_repo: "registry-vpc.cn-hangzhou.aliyuncs.com/google_containers/defaultbackend"
+ingress_nginx_default_backend_image_repo: "registry.aliyuncs.com/google_containers/defaultbackend"
 ingress_nginx_default_backend_image_tag: "1.4"
 cert_manager_version: "v0.5.0"
 cert_manager_controller_image_repo: "quay-mirror.qiniu.com/jetstack/cert-manager-controller"
